made it so the links bring you to the correct sections as well as added breaks in the border lines in the main sections

--- a/assets/style.css
+++ b/assets/style.css
@@ -37,7 +37,7 @@ nav {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 25px;
    }
-
+/*when hovering over links the overline bar now goes away */
 nav a:hover {
     color: aliceblue;
     text-decoration: none;
@@ -62,7 +62,7 @@ a {
     background-size: cover;
     background-position: center;
 }
-
+/*caption on the hero image */
 figcaption {
     background-color: black;
     color: white;
@@ -73,22 +73,25 @@ figcaption {
     right: 0;
     bottom: 600px;
     }
-
+/* here the margin is adding a break in the border lines on the page so they dont look attached */
 .column  {
     
     float: left;
     padding: 10px;
-    height: 200px; 
+    height: 200px;
+    margin-bottom: 20px;
   }
-  
+  /*this is setting the left column so it is smaller in width than the right*/
   .left {
     
     width: 25%;
     border-right: 5px solid black;
     font-size: 40px;
+    padding: 50px;
+
     
   }
-  
+  /*this is setting the right column so it is bigger in width than the left*/
   .right {
     
     width: 75%;
@@ -100,7 +103,10 @@ figcaption {
     display: table;
     clear: both;
   }
-
+  #about-me p{ 
+    text-align: center;
+    }
+/* these media querys are making so the colums stack on each other when shrunk and the nav gets a black backgrtound and goes under the header */
   @media screen and (max-width: 600px) {
     .column {
       width: 100%;
